# ghostpress

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEMO.md  LICENSE  README.md  RESPONSIBLE_USE.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  codegen_format.md  manifest_format.md  positioning.md  prompt_mode.md  quickstart.md
examples/: standalone_har.md  with_claude_code.md  with_printing_press.md
examples/flows/: form_submit.yaml  price_capture.yaml  research.yaml
src/ghostpress/: __init__.py  __main__.py  _types.py  build.py  cli.py  fingerprint.py  manifest.py  mcp_server.py  prompt.py  proxy.py  sniff.py  tools.py
src/ghostpress/codegen/: __init__.py  _utils.py  claude_skill.py  mcp_server.py  python_cli.py  readme.py
src/ghostpress/templates/: cli.py.jinja  mcp.py.jinja  readme.md.jinja  skill.md.jinja
tests/: conftest.py  test_build.py  test_cli.py  test_cli_v1.py  test_codegen_claude_skill.py  test_codegen_mcp_server.py  test_codegen_python_cli.py  test_codegen_readme.py  test_codegen_spec.py  test_codegen_utils.py  test_fingerprint.py  test_manifest.py  test_mcp_server.py  test_prompt.py  test_proxy.py  test_sniff.py  test_tools.py  test_types.py  test_url_to_template.py
tests/fixtures/: manifest_v1.json  sample_har.json
