[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "ghostpress"
version = "1.0.0"
description = "URL → CLI in 60 seconds. Stealth-browser sniff + codegen — works on Amazon, Cloudflare, anything else."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "ghostpress contributors" }]
keywords = [
    "browser-automation",
    "camoufox",
    "har",
    "mcp",
    "printing-press",
    "scraping",
    "stealth",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "camoufox[geoip]>=0.4.0,<0.5.0",
    "mcp>=1.0.0,<2.0.0",
    "typer>=0.12.0",
    "pydantic>=2.5.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
    "playwright>=1.40.0",
    "jinja2>=3.1.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "pyright>=1.1.350",
    "types-pyyaml",
]

[project.scripts]
ghostpress = "ghostpress.cli:app"

[project.urls]
Homepage = "https://github.com/adrienckr/ghostpress"
Issues = "https://github.com/adrienckr/ghostpress/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ghostpress"]

[tool.hatch.build.targets.wheel.force-include]
"src/ghostpress/templates" = "ghostpress/templates"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",        # pycodestyle, pyflakes
    "I",                  # isort
    "B",                  # bugbear
    "UP",                 # pyupgrade
    "N",                  # pep8-naming
    "ASYNC",              # async correctness
    "RUF",                # ruff-specific
    "SIM",                # simplifications
    "TID",                # tidy imports
]
ignore = [
    "E501",               # line length handled by formatter
    "B008",               # function call in default arg (typer pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "N802", "RUF012", "ASYNC240"]
"src/ghostpress/_types.py" = ["N815"]   # HAR 1.2 spec uses camelCase field names
"src/ghostpress/sniff.py" = ["ASYNC240"]   # Path.mkdir before browser launch is fine
"src/ghostpress/tools.py" = ["RUF006"]     # fire-and-forget event-handler tasks
"src/ghostpress/prompt.py" = ["ASYNC240"]  # cache I/O is pre-API and short-lived
"src/ghostpress/build.py" = ["ASYNC240"]   # mkdir before sniff is fine

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = "error"
reportUnusedImport = "warning"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: live tests that hit a real network or browser",
]
